--- a/.github/workflows/ios-ci.yml
+++ b/.github/workflows/ios-ci.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 env:
-  XCODE_VERSION: '15.0'
+  XCODE_VERSION: '16.1'
   IOS_SIMULATOR: 'iPhone 15 Pro'
   IOS_VERSION: '17.0'
 
@@ -23,6 +23,11 @@ jobs:
 
     - name: Select Xcode version
       run: sudo xcode-select -s /Applications/Xcode_${{ env.XCODE_VERSION }}.app/Contents/Developer
+
+    - name: Verify Swift version
+      run: |
+        swift --version
+        echo "Required Swift tools version: 6.0.0"
 
     - name: Cache Swift Package Manager
       uses: actions/cache@v4
@@ -60,6 +65,11 @@ jobs:
     - name: Select Xcode version
       run: sudo xcode-select -s /Applications/Xcode_${{ env.XCODE_VERSION }}.app/Contents/Developer
 
+    - name: Verify Swift version
+      run: |
+        swift --version
+        echo "Required Swift tools version: 6.0.0"
+
     - name: Cache Swift Package Manager
       uses: actions/cache@v4
       with:
@@ -92,6 +102,11 @@ jobs:
     - name: Select Xcode version
       run: sudo xcode-select -s /Applications/Xcode_${{ env.XCODE_VERSION }}.app/Contents/Developer
 
+    - name: Verify Swift version
+      run: |
+        swift --version
+        echo "Required Swift tools version: 6.0.0"
+
     - name: Cache Swift Package Manager
       uses: actions/cache@v4
       with:
@@ -116,6 +131,11 @@ jobs:
 
     - name: Select Xcode version
       run: sudo xcode-select -s /Applications/Xcode_${{ env.XCODE_VERSION }}.app/Contents/Developer
+
+    - name: Verify Swift version
+      run: |
+        swift --version
+        echo "Required Swift tools version: 6.0.0"
 
     - name: Build Release
       run: |
